--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Sparse Warnings
 ===============
 
- * Video link to come
+ * Video, 23m: https://www.youtube.com/watch?v=hmCukzpevUc
  * Talk slides pdf: https://github.com/daxtens/sparse-warnings-talk/blob/master/talk.pdf
  * Talk notes: https://github.com/daxtens/sparse-warnings-talk/blob/master/talk.org
